--- a/library.properties
+++ b/library.properties
@@ -2,9 +2,9 @@ name=LED
 version=1.0.0
 author=Mark Reds <marco@markreds.it>
 maintainer=Mark Reds <marco@markreds.it>
-sentence=An Arduno library to drive a led in multiple modes to aid in multitasking.
-paragraph=LED creates a led object that can be turned on and off within a sketch and the library takes care of the blinking or breathing in the background.
-category=Utilities
+sentence=This library allows an Arduino board to control LEDs.
+paragraph=A LED object has many useful methods to make it blinking or breathing in non blocking mode.
+category=Device Control
 url=https://github.com/markreds81/LED
 includes=LED.h
 architectures=*
