--- a/library.properties
+++ b/library.properties
@@ -2,9 +2,9 @@ name=mrLED
 version=1.0.0
 author=Mark Reds <marco@markreds.it>
 maintainer=Mark Reds <marco@markreds.it>
-sentence=This library allows an Arduino board to control LEDs.
+sentence=Arduino library to control LEDs.
 paragraph=A LED object has many useful methods to make it blinking or breathing in non blocking mode.
-category=Device Control
+category=Signal Input/Output
 url=https://github.com/markreds81/LED
 includes=LED.h
 architectures=*
